[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/robotplayer/png/Objects/Bullet_000.png" type="Texture" id=1]
[ext_resource path="res://assets/robotplayer/png/Objects/Bullet_001.png" type="Texture" id=2]
[ext_resource path="res://assets/robotplayer/png/Objects/Bullet_003.png" type="Texture" id=3]
[ext_resource path="res://assets/robotplayer/png/Objects/Bullet_004.png" type="Texture" id=4]
[ext_resource path="res://assets/robotplayer/png/Objects/Bullet_002.png" type="Texture" id=5]
[ext_resource path="res://src/Object/Bullet/Bullet.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "Destroy",
"speed": 3.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 69.46
height = 49.1273

[node name="Bullet" type="RigidBody2D"]
collision_layer = 16
collision_mask = 2
gravity_scale = 0.0
continuous_cd = 2
contacts_reported = 1
contact_monitor = true
script = ExtResource( 6 )

[node name="BulletSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 1 )
animation = "Destroy"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="BulletSprite" to="." method="_on_BulletSprite_animation_finished"]
